@@ -6,15 +6,19 @@ Amarok ChangeLog
 VERSION 2.9.90
   FEATURES:
    * Added a visual hint that context view applets can be resized in edit mode.
+   * Display missing metadata errors in Wikipedia applet UI.
+
   CHANGES:
    * Replace defunct lyricwiki with lyrics.ovh as lyrics provider for now. (BR 455937)
    * Show only relevant items in wikipedia applet right click menu (BR 323941), use
      monobook skin for opened links and silently ignore non-wikipedia links.
    * Don't show non-functional play mode controls in dynamic mode (BR 287055)
+
   BUGFIXES:
    * Fix loading of some Flickr photos in the photos context view applet and show
      more relevant photos. (BR 317108)
    * Fix playlist inline play control slider & draw icons with higher DPI.
+   * Fix searching for composer and album info for local files in Wikipedia applet.
 
 VERSION 2.9.82
   FEATURES:
